--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Hello Jose Annunziato!</h1>
+	<h1>Hello Charles Wang!</h1>
 </body>
 </html>
